@startuml er_grapehealth
!define TABLE(name) class name << (T,#FFAAAA) >>

TABLE(parcella) {
  id : BIGSERIAL <<PK>>
  nome : VARCHAR <<UNIQUE>>
  varieta : VARCHAR
  colore_bacca : VARCHAR
  lunghezza_germoglio_cm : DOUBLE
  germoglio_aggiornato_il : DATE
  latitudine : DOUBLE
  longitudine : DOUBLE
  note : TEXT
}

TABLE(nodo_sensore) {
  id : BIGSERIAL <<PK>>
  codice : VARCHAR <<UNIQUE>>
  parcella_id : BIGINT <<FK>>
  tipo_nodo : VARCHAR
  attivo : BOOLEAN
  data_installazione : DATE
}

TABLE(regola) {
  codice : VARCHAR <<PK>>
  descrizione : TEXT
  fonte_bibliografica : VARCHAR
}

TABLE(regola_soglia) {
  id : BIGSERIAL <<PK>>
  regola_codice : VARCHAR <<FK>>
  parametro : VARCHAR
  livello_rischio : VARCHAR
  operatore : VARCHAR
  valore_soglia : DOUBLE
  unita_misura : VARCHAR
  durata_minima_minuti : INTEGER
  note : TEXT
}

TABLE(soglia_incubazione_goidanich) {
  temperatura_media : INTEGER <<PK>>
  umidita_alta : BOOLEAN <<PK>>
  percentuale_incremento_giornaliero : DOUBLE
}

TABLE(azione_mitigazione) {
  codice : VARCHAR <<PK>>
  descrizione : TEXT
  fonte_bibliografica : VARCHAR
}

TABLE(regola_azione) {
  id : BIGSERIAL <<PK>>
  regola_codice : VARCHAR <<FK>>
  azione_codice : VARCHAR <<FK>>
  note : TEXT
}

TABLE(misurazione) {
  id : BIGSERIAL <<PK>>
  nodo_id : BIGINT <<FK>>
  parametro : VARCHAR
  valore : DOUBLE
  unita_misura : VARCHAR
  rilevato_il : TIMESTAMPTZ
  ricevuto_il : TIMESTAMPTZ
}

TABLE(allerta) {
  id : BIGSERIAL <<PK>>
  tipo : VARCHAR
  livello_rischio : VARCHAR
  nodo_id : BIGINT <<FK>>
  parcella_id : BIGINT <<FK>>
  descrizione : TEXT
  regola_codice : VARCHAR <<FK>>
  generata_il : TIMESTAMPTZ
  risoluzione_pianificata_il : TIMESTAMPTZ
  risolta_il : TIMESTAMPTZ
  stato : VARCHAR
}

TABLE(trattamento) {
  id : BIGSERIAL <<PK>>
  allerta_id : BIGINT <<FK>>
  tipo_azione : VARCHAR <<FK>>
  eseguito_il : TIMESTAMPTZ
  esito : VARCHAR
  note : TEXT
}

parcella "1" -- "0..*" nodo_sensore : localizza
parcella "1" -- "0..*" allerta : origina (regole a livello di parcella)
regola "1" -- "0..*" regola_soglia : definisce
regola "1" -- "0..*" allerta : scatena
nodo_sensore "1" -- "0..*" misurazione : genera
nodo_sensore "1" -- "0..*" allerta : origina (regole a livello di nodo)
allerta "1" -- "0..*" trattamento : innesca
regola "1" -- "0..*" regola_azione : ammette
azione_mitigazione "1" -- "0..*" regola_azione : è ammessa da
azione_mitigazione "1" -- "0..*" trattamento : sceglie

@enduml
